--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>JUMP WIF CAT</h1>
     
         <p style="color:rgb(92, 219, 23);">JUMP=PUMP.</p>
-        <p title="I'm a tooltip">Wallet adress: soon...</p>
+        <p title="I'm a tooltip">Wallet adress: C4M5Z8J4CBwivW6wkAt91XRyhys4MogNsAd6oMefXd6w</p>
         <div> 
         <img class="meme"src="Untitled design (11).png"width="300" height="300"></div>
         <p>Press Space to Start the Game</p>
